fixed footer gap

--- a/src/Styles/footer.css
+++ b/src/Styles/footer.css
@@ -10,7 +10,7 @@ footer span {
   font-size: 0.8em;
 }
 .footer-container {
-  padding-top: 20vh;
+  padding-top: 27vh;
 }
 .page-end {
   display: flex;
